# hondana

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
.hypothesis/constants/: 0eae24a87fe6b0c4  2445ed4f0e081a81  2e662e260b378f09  3c71ef4bfb0a5cc1  3d5d7df99b9661dc  3f09e38884e3122c  529930d1fa7bc7e8  61adc18780d7faa0  c0deb4b8951cbc00  c774d213fb525409  d64421b0ac443450  d763b30593e71107  e1880410ad04c2a0  e5fa1b41ec301ee8
.hypothesis/examples/04e6b3400353b141/: 161fe0ff6a69177e  5e5635ebbd18391a  6a5f82b0a4d49b08  6ccd6a535ebff197  77172306b6ce0e29  a419871af9725450  b1d503fe6990eeff  c23652028daf3ada  e05b8b2751e64f83  fc0c56fa4f1ab302
.hypothesis/examples/161fe0ff6a69177e/: 3ec74f55e2f36a56  5121081b475e65ae  8fbd907f2f982c90  af1ca1a692c2bd02
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
data/: books.json  impressions.json  status_history.json
data/impressions/: むらさきのスカートの女_96913eaf-60be-4112-9cfa-29b1d4232929.md
src/: __init__.py  barcode_scanner.py  book_service.py  cli.py  cli_v2_commands.py  data_migration.py  impression_service.py  markdown_converter.py  markdown_impression_service.py  models.py  openbd_client.py  repository.py  static_site_generator.py  static_site_generator_v2.py  status_service.py  web_app.py
tests/: __init__.py  test_book_service.py  test_cli.py  test_error_handling.py  test_impression_service.py  test_models.py  test_openbd_client.py  test_static_site_generator.py
(+58 files in other folders)
