[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "book-library"
version = "0.1.0"
description = "Personal book library management and static site generator"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "hypothesis>=6.92.1",
    "click>=8.1.7",
    "pyzbar>=0.1.9",
    "opencv-python>=4.8.0",
    "markdown>=3.5.0",
    "Flask>=3.0.0",
]

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-dir]
"" = "."

[project.scripts]
hondana = "src.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
